<resources>
    <string name="app_name">Project</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="month">Month</string>
    <string name="year">Year(A.D.)</string>
    <string name="empty"></string>
    <string name="chooseMonth">Choose Month</string>
    <string name="record">Record</string>
    <string name="summary">Summary</string>
    <string name="selectDate">Select Date</string>

    <string name="menu_main">Menu</string>
    <string name="netAmount_main">Net amount</string>
    <string name="income_main">Income</string>
    <string name="expenses_main">Expenses</string>
    <string name="history_main">History</string>

    <string name="dismiss">Dismiss</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="day">Date</string>
    <string name="value">Value</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <string name="label_month">MONTH</string>
    <string name="label_year">YEAR</string>
    <string name="hisforapp">History</string>
    <string name="datetime">date/time</string>
    <string name="total">total</string>
    <string name="description">description</string>
    <string name="cancel">cancel</string>
    <string name="enterdata">Please Enter All Data</string>
    <string name="ok">ok</string>

</resources>