<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/menu_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/netAmount_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            android:text="@string/netAmount_main" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/income_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginRight="60dp"
                    android:textSize="20sp"
                    android:padding="20dp"
                    android:text="@string/income_main" />

                <Button
                    android:id="@+id/expenses_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textSize="20sp"
                    android:padding="20dp"
                    android:text="@string/expenses_main"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/history_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="100dp"
                    android:padding="10dp"
                    android:text="@string/history_main" />
            </LinearLayout>

            <!-- Center the button horizontally within the LinearLayout -->


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
